@@ -733,8 +733,8 @@ test winFCmd-7.18 {TraverseWinTree: recurse on files: several files and dir} {
     createfile td1/tf3
     createfile td1/tf4
     testfile cpdir td1 td2
-    glob td2/*
-} {td2/tf1 td2/tf2 td2/td2 td2/tf3 td2/tf4}
+    lsort [glob td2/*]
+} {td2/td2 td2/tf1 td2/tf2 td2/tf3 td2/tf4}
 test winFCmd-7.19 {TraverseWinTree: call TraversalCopy: DOTREE_POSTD} {
     cleanup
     file mkdir td1
